# demo-batch-stream-aws

./: .gitignore  README.md  pyproject.toml  template.yaml
batch/: Dockerfile  build.sbt  template.yaml
batch/src/main/scala/: CreateData.scala  DbSecret.scala  Ingestion.scala
streaming/: Dockerfile  pyproject.toml  template.yaml
streaming/src/: consumer.py  producer.py
